Refactor GradeServiceImpl and apply general validations and minor optimizations.